# gallery

./: pyproject.toml  pytest.ini
app/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/tests/: test_api.py
gallery/: settings.py  urls.py
user/: serializers.py  urls.py  views.py
